...
        ) {
            if (startedAt != endedAt) {
                item {
                    Button(
                        { onClickReturnTime() }
                    ) {
                        Text("초기화")
                    }
                }

            }
            item {
                Button(
                    { onClickAddTime(0, 10) }
                ) {
                    Text("+10분")
                }
            }
            item {
                Button(
                    { onClickAddTime(0, 15) }
                ) {
...
