<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="add_photo">사진 추가</string>
    <string name="delete_photo">사진 삭제</string>
    <string name="photo_maximum_message">사진은 최대 4장까지 올릴 수 있습니다.</string>
    <string name="add_photo_desc">사진 추가</string>
</resources>
