<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="new_record">새 기록</string>
    <string name="photo">사진</string>
    <string name="enter_title">제목을 입력해주세요</string>
    <string name="enter_description">설명을 작성해주세요</string>
    <string name="save_record">추가하기</string>
    <string name="photo_error">사진 저장중 에러가 발생했습니다.</string>
    <string name="time_out">시간이 범위 밖으로 벗어났습니다.</string>
    <string name="start_time">시작 시간</string>
    <string name="end_time">종료 시간</string>
</resources>
